--- a/V2rayU/Base.lproj/PreferenceAdvance.xib
+++ b/V2rayU/Base.lproj/PreferenceAdvance.xib
@@ -129,7 +129,7 @@
                             <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XVQ-M0-Vkn">
                                 <rect key="frame" x="48" y="10" width="320" height="22"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="lKP-40-S8o">
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="8.8.8.8,1.1.1.1,114.114.114.114,119.29.29.29" drawsBackground="YES" id="lKP-40-S8o">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
